<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rancerle.ee408tipcalculator.MainActivity">

    <TextView
        android:id="@+id/label_bill"
        style="@style/LabelStyle"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:padding="10dp"
        android:text="@string/label_bill"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/amount_bill"
        style="@style/InputStyle"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:layout_alignBottom="@+id/label_bill"
        android:layout_toRightOf="@+id/label_bill"
        android:ems="10"
        android:hint="@string/amount_bill_hint"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/label_tip_percent"
        style="@style/LabelStyle"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/label_bill"
        android:layout_alignLeft="@+id/label_bill"
        android:layout_alignRight="@+id/label_bill"
        android:textSize="14sp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/label_tip_percent"  />

    <EditText
        android:id="@+id/amount_tip_percent"
        style="@style/InputStyle"
        android:layout_toRightOf="@+id/label_tip_percent"
        android:ems="10"
        android:layout_below="@+id/label_bill"
        android:layout_alignParentRight="true"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:hint="@string/amount_tip_percent_hint"
        android:inputType="number"  />

    <!-- red line -->

    <view
       android:id="@id/red_line"
        android:layout_below="@+id/label_tip_percent"
        android:layout_marginTop="20dp"
        android:layout_height="5dip"
        android:layout_width="match_parent"
        android:layout_alignLeft="@+id/label_bill"
        android:layout_alignRight="@+id/amount_bill"
        android:background="#FF00"  />

    <TextView
        android:id="@+id/label_tip"
        style="@style/LabelStyle"
        android:layout_alignLeft="@+id/label_bill"
        android:layout_alignRight="@+id/label_bill"
        android:layout_below="@+id/red_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/label_tip"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/amount_tip"
        style="@style/OutputStyle"
        android:layout_toRightOf="@+id/label_tip"
        android:layout_alignBottom="@+id/label_tip"
        android:layout_alignRight="@id/amount_bill"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/label_total"
        style="@style/LabelStyle"
        android:layout_alignLeft="@+id/label_bill"
        android:layout_alignRight="@+id/label_bill"
        android:layout_below="@+id/label_tip"
        android:layout_marginTop="20dp"
        android:text="@string/label_total"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/amount_total"
        style="@style/OutputStyle"
        android:layout_toRightOf="@+id/label_total"
        android:layout_alignBottom="@+id/label_total"
        android:layout_alignRight="@+id/amount_bill"
        android:layout_marginLeft="20dp"/>

    <Button
        android:id="@+id/button_calculate"
        style="@style/ButtonStyle"
        android:layout_below="@+id/amount_total"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="calculate"
        android:text="@string/button_calculate" />

</RelativeLayout>
